syntax = "proto3";

package controller.servers.v1;
option go_package = "github.com/hashicorp/watchtower/internal/servers;servers";

import "controller/storage/timestamp/v1/timestamp.proto";

// Server contains all fields related to a Controller or Worker resource
message Server {
  // Private ID of the resource
  string private_id = 10;

  // Name of the resource
  string name = 20;

  // Type of the resource (controller, worker)
  string type = 30;

  // Description of the resource
  string description = 40;

  // First seen time from the RDBMS
  storage.timestamp.v1.Timestamp first_seen_time = 50;

  // Last seen time from the RDBMS
  storage.timestamp.v1.Timestamp last_seen_time = 60;
}
