syntax = "proto3";

// Package store provides protobufs for storing types in the credential package.
package controller.storage.credential.store.v1;
option go_package = "github.com/hashicorp/boundary/internal/credential/store;store";

import "controller/storage/timestamp/v1/timestamp.proto";
import "controller/custom_options/v1/options.proto";

message Store {
  // public_is is a surrogate key suitable for use in a public API.
  // @inject_tag: `gorm:"primary_key"`
  string public_id = 1;

  // The scope_id of the owning scope and must be set.
  // @inject_tag: `gorm:"not_null"`
  string scope_id = 2;
}

message Library {
  // public_is is a surrogate key suitable for use in a public API.
  // @inject_tag: `gorm:"primary_key"`
  string public_id = 1;

  // The store_id of the owning store and must be set.
  // @inject_tag: `gorm:"not_null"`
  string store_id = 2;
}

message Credential {
  // public_is is a surrogate key suitable for use in a public API.
  // @inject_tag: `gorm:"primary_key"`
  string public_id = 1;
}

message Static {
  // public_is is a surrogate key suitable for use in a public API.
  // @inject_tag: `gorm:"primary_key"`
  string public_id = 1;

  // The store_id of the owning store and must be set.
  // @inject_tag: `gorm:"not_null"`
  string store_id = 2;
}

message Dynamic {
  // public_is is a surrogate key suitable for use in a public API.
  // @inject_tag: `gorm:"primary_key"`
  string public_id = 1;

  // The library_id of the owning library and must be set.
  // @inject_tag: `gorm:"not_null"`
  string library_id = 2;
}
